k8s/webhook-configuration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRRHNETWhJMFlPQ2NqQU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NVGt3TnpBNE1EWXhPREkwV2hnUE1qSTVNekEwTWpJd05qRTRNalJhTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQUxZajZMMlZ3SFdLUGZFSnZCWnNkSDJ5alFlUG5wVEZxOFlGV3I3YUJ3NCtueDdJTW4zc2VKZW0Kd3BDQXNxdURjWkpyOHd2STdCZG84WVhuUFdvOFVyUnhUR0RpRTkyazgrN0JMVE92a0UxUmp3MDFTSjFaU1ZtKwpGVVhtYkRPQWtj [...]
      service:
        namespace: opa
        name: opa
